--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,20 +7,10 @@
   <%= @article.text %>
 </p>
 
+<h2>Comments</h2>
+<%= render @article.comments %>
 
 <h2>Add a comment:</h2>
-<h2>Comments</h2>
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
- 
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.body %>
-  </p>
-<% end %>
 <%= form_with(model: [@article, @article.comments.build], local: true) do |form| %>
   <p>
     <%= form.label :commenter %><br>
